# UpdateNotifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml.example  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yaml
UpdateNotifier/: __main__.py  config.py  data_io.py  discord_notifier.py  services.py
